--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
 }
 /* shared style */
 
+.secondary-background{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,6 +27,17 @@
     padding: 18px 35px;
     border: none;
     border-radius: 5px;
+}
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
 }
 /* header */
 .header{
@@ -82,4 +96,28 @@ nav li a{
 
 .banner-profile-pic{
     width: 580px;
+}
+
+/* About Styles */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+    
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600;
 }
