--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,7 @@
 .secondary-background{
     background-color: #FFF8F3;
 }
+
 .text-primary{
     color: #FD6E0A;
 }
@@ -27,6 +28,7 @@
     padding: 18px 35px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .section-title{
@@ -39,13 +41,16 @@
     font-size: 18px;
     color: #757575;
 }
+
+.text-center{
+    text-align: center;
+}
 /* header */
 .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
     background-repeat: no-repeat;
     background-position: top left, bottom right;
 }
-
 
 /* Nav Styles */
 nav{
@@ -84,11 +89,13 @@ nav li a{
 .banner-content{
     max-width: 580px;
 }
+
 .banner-greetings{
     font-size: 45px;
     font-weight: 600;    
 
 }
+
 .banner-title{
     font-weight: bold;
     font-size: 85px;
@@ -110,7 +117,13 @@ nav li a{
 main{
     max-width: 1140px;
     margin: 0 auto;
+    padding-top: 50px;
     
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
 }
 
 .about-items{
@@ -120,4 +133,16 @@ main{
 
 .item-description{
     font-weight: 600;
+}
+
+/* skills styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
 }
