--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -146,3 +146,27 @@ main section{
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
 }
+
+/* resume styles */
+
+.resume-container{
+    display: flex;
+    gap: 24px;  
+}
+
+.exp-subtitle{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.exp-description, .exp-subtitle{
+    color: rgb(117, 117, 117);
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
+}
